--- a/gui/pyqt_ui/sampling_feature.ui
+++ b/gui/pyqt_ui/sampling_feature.ui
@@ -286,6 +286,19 @@
            <property name="text">
             <string>TextLabel</string>
            </property>
+           <property name="scaledContents">
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QPushButton" name="btn_create_methode">
+           <property name="text">
+            <string>Méthode introuvable</string>
+           </property>
           </widget>
          </item>
         </layout>
