--- a/gui/pyqt_ui/sampling_feature.ui
+++ b/gui/pyqt_ui/sampling_feature.ui
@@ -170,7 +170,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="2">
+      <item row="5" column="0" colspan="2">
        <widget class="QLabel" name="label_4">
         <property name="minimumSize">
          <size>
@@ -183,7 +183,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="2">
+      <item row="6" column="0" colspan="2">
        <widget class="QDateTimeEdit" name="DTE_sampling_date">
         <property name="minimumSize">
          <size>
@@ -193,7 +193,7 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QLabel" name="label_6">
         <property name="minimumSize">
          <size>
@@ -206,7 +206,7 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
+      <item row="7" column="1">
        <widget class="QComboBox" name="CB_interet">
         <property name="minimumSize">
          <size>
@@ -216,7 +216,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0" colspan="2">
+      <item row="8" column="0" colspan="2">
        <widget class="QGroupBox" name="gb_process">
         <property name="minimumSize">
          <size>
@@ -304,7 +304,7 @@
         </layout>
        </widget>
       </item>
-      <item row="8" column="0">
+      <item row="9" column="0">
        <widget class="QLabel" name="label_7">
         <property name="minimumSize">
          <size>
@@ -316,6 +316,16 @@
          <string/>
         </property>
        </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_note">
+        <property name="text">
+         <string>Notes</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPlainTextEdit" name="PTE_note"/>
       </item>
      </layout>
     </widget>
